--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -689,8 +689,7 @@
 .contact-inner
 {
     box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
-    padding: 30px 40px;
-    justify-content: center;
+    padding: 15px;
     height: 100%;
     border-radius: 10px;
 }
@@ -1259,11 +1258,15 @@
     .contact-form-inner h5
     {
         font-size: 22px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+    }
+    .contact-map iframe
+    {
+        border-radius: 15px;
     }
     .contact-form img
     {
-        min-height: 390px;
+        min-height: 360px;
     }
     .about-details h2
     {
@@ -1416,10 +1419,16 @@
         line-height: 10px;
         margin-top: 10px;
     }
-    .inner-baner-dtl img
+    .inner-baner-dtl .breadcumb li img
     {
         width: 8px;
+        min-height: initial;
         border-radius: 15px !important;
+    }
+    .inner-baner-dtl img
+    {
+        min-height: 140px;
+        object-fit: cover;
     }
     .inner-heading
     {
@@ -1611,10 +1620,20 @@
     }
     .contact-inner
     {
-        padding: 25px 30px;
+        padding: 18px 13px;
         margin-bottom: 20px;
         height: auto;
         justify-content: flex-start;
+    }
+    .contact-inner img
+    {
+        width: 48px !important;
+        margin-right: 10px !important;
+    }
+    .contact-inner h5
+    {
+        font-size: 18px !important;
+        margin-bottom: 3px;
     }
     .contact-form-inner
     {
@@ -1659,7 +1678,7 @@
     }
     .custom-dropdown
     {
-        width: 100%;
+        width: 100% !important;
     }
     .navbar .collapse li.dropdown ul.dropdown-menu
     {
