--- a/src/app/pages/contact/contact.css
+++ b/src/app/pages/contact/contact.css
@@ -2,20 +2,20 @@
    YOUR EXISTING CONTACT STYLES
    ======================================== */
 .contact-inner img {
-    width: 70px;
-    margin-right: 20px;
+    width: 55px;
+    margin-right: 15px;
 }
 
 .contact-inner h5 {
-    font-size: 22px;
+    font-size: 20px;
     font-family: var(--primary-font);
     color: var(--secondary-color);
+    margin-bottom: 5px;
 }
-
 .contact-inner p {
-    color: var(--info-color);
+  font-size: 15px;
+  color: var(--info-color);
 }
-
 .contact-form-inner {
     height: 100%;
     padding: 25px;
